todo_node/frontend/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todofrontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todofrontend
  template:
    metadata:
      labels:
        app: todofrontend
    spec:
      volumes:
        - name: shared-imagecache
          persistentVolumeClaim:
            claimName: image-claim
      containers:
        - name: todofrontend
          image: rakhicc/todofrontend:v1
          volumeMounts:
          - name: shared-imagecache
            mountPath: /data
