todo_node/frontend/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: todofrontend-svc
                port:
                  number: 80

          - path: /image
            pathType: Prefix
            backend:
              service:
                name: todobackend-svc
                port:
                  number: 80
